Git commit message 2 for SAP UI5 Walkthrough

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,16 @@
                     "localUri": "<localUri>"
                 }
             }
-        }
+        },
+		"dataSources": {
+			"invoiceRemote": {
+				"uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
+		}
     },
     "sap.ui": {
         "_version": "1.1.0",
@@ -78,10 +87,10 @@
                 },
                 "uri": "<uriRelativeToManifest>"
             },
-            "": {
-                "dataSource": "<dataSourceAlias>",
-                "settings": {}
+            "invoice": {
+                "dataSource": "invoiceRemote"
             }
+
         },
         "rootView": {
             "viewName":"sap.ui.demo.walkthrough.view.App",
